--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <title>Scholar - Online School HTML5 Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://github.com/1nineOdes/oneself.github.io/tree/main/templatemo_586_scholar/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-scholar.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="https://github.com/1nineOdes/oneself.github.io/tree/main/templatemo_586_scholar/assets/css/fontawesome.css">
+    <link rel="stylesheet" href="https://github.com/1nineOdes/oneself.github.io/tree/main/templatemo_586_scholar/assets/css/templatemo-scholar.css">
+    <link rel="stylesheet" href="https://github.com/1nineOdes/oneself.github.io/tree/main/templatemo_586_scholar/assets/css/owl.css">
+    <link rel="stylesheet" href="https://github.com/1nineOdes/oneself.github.io/tree/main/templatemo_586_scholar/assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 <!--
 
